some final CSS TWEAKS YEAAAH

--- a/design/css/go.css
+++ b/design/css/go.css
@@ -2,19 +2,20 @@ body{background: #ba0707 url(../images/texture.png); box-shadow: 0 0 200px rgba(
 
 a:focus{outline: none;}
 
-.yelling p{font-size: 120px; margin: 0 auto; line-height: 120px; text-align: center;  color: #fff; text-shadow: 0 2px 1px rgba(115, 0, 0, 0.5);  letter-spacing: -2px; text-transform: uppercase;  vertical-align: middle; font-family: VeneerThree; position: absolute; top:50%; left: auto; width: 80%; padding: 0 10%; margin-top: -140px;  font-family: VeneerThree;}
+.yelling p{font-size: 120px; margin: 0 auto; line-height: 120px; text-align: center;  color: #fff; text-shadow: 0 2px 1px rgba(115, 0, 0, 0.5);  letter-spacing: -2px; text-transform: uppercase;  vertical-align: middle; font-family: VeneerThree; position: absolute; top:50%; left: auto; width: 100%; padding: 0; margin-top: -140px;  font-family: VeneerThree;}
 .yelling em{font-style: normal; opacity: 1;}
 .yelling strong{position: relative;}
 .yelling strong:after{content:''; display: block;width: 100%; height: 20px; position: absolute; top:100%; margin-top: -10px; left: 0; background: #fff; box-shadow: 0 2px 1px rgba(115, 0, 0, 0.5); -webkit-transform: rotate(-2deg); -moz-transform: rotate(-2deg);}
 
 .dude{background: #111 url(../images/dark_texture.jpg); border-radius: 9999px; position: absolute; top: 100%; left: 50%; margin: -60px 0 0 -100px; width: 200px; height: 200px; font-size: 22px; color: #fff; text-decoration: none; text-align: center; line-height: 30px; font-weight: 900; text-transform: uppercase; padding: 20px 0 0; opacity: 0.7; font-family: 'Exo', 'Helvetica Neue', Helvetica, sans-serif; box-shadow: inset 0 2px 1px rgba(0,0,0,.8); transition: opacity .5s ease-in-out; -moz-transition: opacity .5s ease-in-out; -webkit-transition: opacity .5s ease-in-out;}
-.dude .em{display: block; width: 100%; text-align: center; top:0; left: 0; font-style: italic;}
+.dude em{display: block; width: 100%; text-align: center; top:18px; left: 0; font-style: italic; position: absolute;}
 .dude:hover{color: #fff; text-decoration: none; opacity: 1;}
 
 
 /* RAD */
 .rad{background: #172226 url(../images/dark_canvas.jpg) no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; position: relative; overflow: hidden;}
-.rad .dude{background:#ba0707 url(../images/texture.png); color: #000;}
+.rad .dude{background:#ba0707 url(../images/texture.png); color: #000; top:0; margin-top: -130px; opacity: 1; width: 240px; margin-left: -120px;}
+.rad .dude em{ top:174px;}
 
 .rad .container{padding-top: 100px;}
 .rad h3{color: #95d7be; opacity: 0.5; font-family: 'VeneerThree'; font-size: 60px; line-height: 80px; text-transform: uppercase; font-weight: normal; padding: 0 0 24px;  font-family: VeneerThree;}
@@ -74,7 +75,9 @@ a:focus{outline: none;}
 /* iphone */
 @media (max-width: 480px) {
 
-
+.yelling p {position: relative; margin: 0; top:auto; padding: 20px 0 0; width: auto;}
+html body{padding: 0;}
+.rad{padding: 0 20px;}
 }
 
 /* ipad */
