some more quotes

--- a/design/css/go.css
+++ b/design/css/go.css
@@ -23,16 +23,19 @@ a:focus{outline: none;}
 
 
 .hide_stuff{position: absolute; top:100%; left: 0; width: 100%; overflow: hidden; height: 80px; margin-top: -80px;}
-.dude{background: rgba(0,0,0,0.7); border-radius: 9999px; position: absolute; top: 100%; left: 50%; margin: -60px 0 0 -100px; width: 200px; height: 200px; font-size: 22px; color: #fff; text-decoration: none; text-align: center; line-height: 30px; font-weight: 900; text-transform: uppercase; padding: 20px 0 0; opacity: 0.6; box-shadow: inset 0 2px 1px rgba(0,0,0,.8); transition: opacity .5s ease-in-out; -moz-transition: opacity .5s ease-in-out; -webkit-transition: opacity .5s ease-in-out;}
-.dude em{display: block; width: 100%; text-align: center; top:18px; left: 0; font-style: italic; position: absolute;}
-.dude:hover{color: #fff; text-decoration: none; opacity: 1;}
-
+.dude{ border-radius: 9999px; position: absolute; top: 100%; left: 50%; margin: -60px 0 0 -100px; width: 200px; height: 200px; font-size: 22px; color: #fff; text-decoration: none; text-align: center; line-height: 30px; font-weight: 900; text-transform: uppercase; padding: 20px 0 0; box-shadow: inset 0 2px 1px rgba(0,0,0,.8); transition: opacity .5s ease-in-out; -moz-transition: opacity .5s ease-in-out; -webkit-transition: opacity .5s ease-in-out; background: #172226 url(../images/dark_canvas.jpg) no-repeat center fixed; border-bottom: 2px solid rgba(0,0,0,0.8)}
+.dude em{display: block; width: 100%; text-align: center; top:18px; left: 0; font-style: italic; position: absolute; opacity: 0.5}
+.dude:hover{color: #fff; text-decoration: none;}
+.dude:hover em{opacity: 1;}
 
 /* RAD */
 .rad{position: relative;}
+/*
 .rad .hide_stuff{top:0; margin: 0;}
 .rad .dude{background:rgba(0,0,0,0.4); color: #4e8679; top:0; margin-top: -160px; opacity: 1; width: 240px; margin-left: -120px;}
 .rad .dude em{ top:174px;}
+*/
+.rad .dude {color: #666; background: rgba(0,0,0,0.5);}
 .rad .dude:hover{color: #fff;}
 
 
