--- a/design/css/go.css
+++ b/design/css/go.css
@@ -12,7 +12,8 @@ html, body, .yelling, .rad{height: 100%;}
 
 .loading .spinner {position: absolute; top:50%; left: 50%; margin: -15px 0 0 -25px; width: 50px; height: 30px; display: block; z-index: 9999; background: url(../images/pacman.gif) no-repeat top; padding-top: 30px; font-size: 12px; color: #ff0;}
 
-body{background: #172226 url(../images/dark_canvas.jpg) no-repeat center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;}
+/* body{background: #172226 url(../images/dark_canvas.jpg) no-repeat center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;} */
+body{background: #ba0707 url(../images/texture.png); box-shadow: 0 0 200px rgba(0,0,0,0.5) inset; }
 
 a:focus{outline: none;}
 .yelling{background: #ba0707 url(../images/texture.png); box-shadow: 0 0 200px rgba(0,0,0,0.5) inset; display: none;}
@@ -35,26 +36,30 @@ a:focus{outline: none;}
 .rad .dude{background:rgba(0,0,0,0.4); color: #4e8679; top:0; margin-top: -160px; opacity: 1; width: 240px; margin-left: -120px;}
 .rad .dude em{ top:174px;}
 */
+
+.rad iframe{border-radius: 5px; margin-bottom: 10px}
+.rad hr{border-bottom:1px solid rgba(255,255,255,0.3); border-top:1px solid rgba(0,0,0,0.2);}
+
 .rad .dude {color: #666; background: rgba(0,0,0,0.5);}
 .rad .dude:hover{color: #fff;}
 
+.rad p, .rad a{text-shadow: 0 1px 0px rgba(0,0,0,0.9);}
 
-
-.rad .container{padding-top: 100px;}
-.rad h3{color: #95d7be; opacity: 0.5; font-size: 40px; line-height: 50px; text-transform: uppercase; font-weight: normal; padding: 0 0 48px;}
+.rad .container{padding-top: 80px;}
+.rad h3{color: #fff; opacity: 1; font-size: 40px; line-height: 50px; text-transform: uppercase; font-weight: normal; padding: 0 0 48px;}
 .rad h3 em{font-style: normal;}
 .rad h3 em strong{font-weight: normal;}
-.rad h3 em cite{font-size: 24px; opacity: 0.3; letter-spacing: 1px; margin-left: 10px;}
+.rad h3 em cite{font-size: 24px; opacity: 0.7; letter-spacing: 1px; margin-left: 5px; display: block;}
 
-.rad p{color: #50736c; font-size: 16px; line-height: 24px;}
+.rad p{color: #fff; font-size: 16px; line-height: 24px;}
 
-.rad .linkz a{display: block; color: #50736c; opacity: 0.6; transition: opacity .5s ease-in-out; -moz-transition: opacity .5s ease-in-out; -webkit-transition: opacity .5s ease-in-out; font-size: 18px; line-height: 24px; padding: 10px 10px 10px 30px; position: relative; border-radius: 3px; font-size: 18px; text-decoration: none;}
-.rad .linkz a strong{color: #8eaca6; text-transform: uppercase; font-weight: normal; font-size: 24px; margin-right: 10px}
+.rad .linkz a{display: block; color: #fff; opacity:1 ; transition: opacity .5s ease-in-out; -moz-transition: opacity .5s ease-in-out; -webkit-transition: opacity .5s ease-in-out; font-size: 18px; line-height: 24px; padding: 10px; position: relative; border-radius: 3px; font-size: 18px; text-decoration: none;}
+.rad .linkz a strong{color: #fff; text-transform: uppercase; font-weight: normal; font-size: 18px; margin-right: 10px}
 
-.rad .linkz a .caret{border-bottom-color: #fff; border-top-color: #fff;  -webkit-transform: rotate(-90deg); -moz-transform: rotate(-90deg); position: absolute; top:18px; left: 10px;}
+.rad .linkz a .caret{border-bottom-color: #fff; border-top-color: #fff;  -webkit-transform: rotate(-90deg); -moz-transform: rotate(-90deg); position: absolute; top:19px; left: 10px; display: none;}
 
 .rad .linkz a:hover,
-.rad .linkz a:hover strong{opacity: 1; color: #fff;}
+.rad .linkz a:hover strong{opacity: 0.99; color: #fff;}
 .rad .linkz a:hover{background: rgba(0,0,0,0.1);}
 .rad .linkz a:hover .caret{border-width: 6px;}
 
@@ -62,10 +67,11 @@ a:focus{outline: none;}
 
 .chat {padding: 20px 0 0;}
 .chat input,
-.chat label{display: inline-block; padding: 5px; margin: 0; color: #50736c; font-size: 16px;}
-.chat label{width: 60px;}
+.chat label{display: inline-block; padding: 5px; margin: 0; color: #fff; font-size: 16px; width: 180px}
+.chat label{width: 80px;}
 
 .chat p{clear: both;}
+.chat a{color: #fff;}
 
 .chat input{border:none; background: rgba(0,0,0,0.1)}
 .chat input:hover{background-color: rgba(0,0,0,0.15)}
