MORE INTENSE EXPERIENCES PLEASE

--- a/htdocs/design/css/go.css
+++ b/htdocs/design/css/go.css
@@ -109,10 +109,17 @@ h1 a .ss-rows,
 .content .dude .zing p a:hover{border-bottom: 1px solid rgba(255,255,255,0.5);}
 .content .dude .zing .btn{margin-top: 10px;}
 
-.content .tab{opacity: 0; top: 10px; position: absolute;  left: 0; width: 420px; height: 420px;}
+.talks .dude .hero{border-radius: 99999em; background: #e2e2e2; width: 420px; height: 420px; position: relative; display: block; text-decoration: none;}
+.talks .dude .hero .ss-chat{color: #777;font-size: 180px; line-height: 100%; position: absolute; top:50%; left: 50%; margin: -65px 0 0 -85px;}
+.talks .dude .hero:hover{background: #fff}
+.talks .dude .hero:hover .ss-chat{color: #09f;}
+
+/* tab activiteee */
+/* ------------------------------------------------------------------------------- */
+.content .tab{opacity: 0; top: 10px; position: absolute;  left: 0; width: 420px; height: 420px; z-index: 100;}
 .content .tab .dude .zing{top: 200px;}
 
-.content .tab.active{opacity:1; top: 0;}
+.content .tab.active{opacity:1; top: 0; z-index: 200}
 .content .tab.active .dude .zing{top: 150px;}
 
 
