--- a/htdocs/design/css/go.css
+++ b/htdocs/design/css/go.css
@@ -211,7 +211,9 @@ h1 a .ss-rows,
 
 	.circle .tab{position: relative; top:auto; left: auto; opacity: 1; margin-bottom: 80px;}
 	.content .dude .zing,
-	.content .tab .dude .zing{margin-left: 40px; top:50px;}
+	.content .tab .dude .zing,
+	.content .tab.previously .dude .zing,
+	.content .tab.upcoming .dude .zing{margin-left: 40px; top:50px;}
 	#about{display: none;}
 	
 	.speaking .dude .hero .ss-chat,
@@ -219,12 +221,18 @@ h1 a .ss-rows,
 	
 	.bound{min-width: 0;}
 	
-	.kontakt{display: none;}
+	.circle{margin: 30px 30px 0;}	
 	
+	.kontakt{display: none;}
+	h1{display: none;}
+
+
+	
+/*
+too many breaks
 }
-
-
-@media (max-width: 610px) {
+@media (max-width: 680px) {
+*/
 
 
 	.kontakt{position: relative;  padding: 30px 4px 30px; display: block; text-align: center; bottom: auto; right: auto;}
@@ -243,14 +251,16 @@ h1 a .ss-rows,
 	.circle,
 	.speaking .dude .hero,
 	.content .tab,
-	.contact .dude .hero{width: auto; height: auto; text-align: center; position: relative;}
-	
+	.content .tab.previously,
+	.content .tab.upcoming,
+	.contact .dude .hero{width: auto; height: auto; text-align: center; position: relative; top: auto; }
+
 	.circle{margin: 0px 20px 0;}
 	
 	
-	
-	.content .dude .zing,
-	.content .tab .dude .zing{position: relative; top:auto; left: auto; text-align: center; width: auto; margin: 0 0 30px;}
+	.content .tab .dude .zing,
+	.content .tab.previously .dude .zing,
+	.content .tab.upcoming .dude .zing{position: relative; top:auto; left: auto; text-align: center; width: auto; margin: 0 0 30px;}
 	
 	.content .dude .zing h3{margin: 30px 0 0; line-height: 48px;}
 	
